app/assets/stylesheets/static.scss
// Place all the styles related to the static controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#main-content {
  min-width: 768px;
  > .container {
    min-width: 768px;
  }
}

.search-bar {
  background: rgba(70, 70, 70, 0.9);
  color: white;
  padding: 1em;
  font-size: 0.8em;
  position: relative;
  form {
    display: flex;
    .form-group {
      width: 100%;
      margin: 0 1em;
    }
    .form-control {
      padding: 0;
    }
    .btn {
      padding: 0 1em;
    }
  }
}

.container.header-image {
  padding: 0;
  .img-fluid {
    width: 100%;
  }
}

.homepage-header {
  text-align: center;
  padding: 3em 0;
  .homepage-callout {
    padding: 1em 0;
    color: white;
  }
  .homepage-sections {
    color: white;
    h1, h2, h3 { text-transform: uppercase; }
    h1, h2, h3, a { color: white; font-weight: bold }
    a { text-decoration: underline; }
    a::before { content: '> '; }
  }
}

#header-image {width: 100%; position: absolute;}
#main-content {
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 100%;

    .sidebar-area {
      padding: 2em;
    }
    .content-area {
      padding: 2em 1em;

      h1 {
        font-weight: 300;
        margin-bottom: 1em;
      }
      & > .row {
        margin-left: 0;
        margin-right: 0;
      }
      .jumbotron {
        padding: 0;
      }
    }
    .notifications {
      background: #eceeef;

      .alert {
        background: #faf700;
        font-weight: 600;
        margin-bottom: 0;
        width: 100%;
      }
    }
}

.frontpage-show {

  img {
    -webkit-box-shadow: 0px 0px 2px 1px rgba(168,168,168,1);
    -moz-box-shadow: 0px 0px 2px 1px rgba(168,168,168,1);
    box-shadow: 0px 0px 2px 1px rgba(168,168,168,1);
    max-width: 100%;
  }

  figurecaption {
    display: flex;
    flex-direction: column;
    margin: 8px 0 0;

    .full-title,
    .company,
    .venue,
    .followers {
      margin: 2px 0;
    }

    .full-title {
      line-height: 1.25;

      .title {
        font-weight: 400;
      }
    }

    .company {
      a { color: $gray-light; }
      color: $gray-light;
      font-size: .85em;
      font-style: italic;
      line-height: 1em;
    }

    .venue {
      a { color: $gray-light; }
      color: $gray-light;
      font-size: .85em;
      font-weight: 400;
      line-height: 1em;
    }

    .followers {
      color: $brand-primary;
      font-size: .85em;
      line-height: 1.2em;
      .fa {
        color: $brightgreen;
      }
    }
    .likes {
      color: $brand-primary;
      font-size: .85em;
      line-height: 1.2em;
      .fa {
        color: $brand-primary;
      }
    }


  }
}

.btn-signup {
  font-weight: 300;
  letter-spacing: 1px;
  margin: 0;
}

.nav-tabs { flex-wrap: wrap; }

@media (min-width: 544px) {
  #main-content {

    .container > .row {
      flex-direction: row;
    }
    .sidebar-area {
      margin-bottom: 0;
      padding: 2em 1em;
    }
    .content-area {
      padding: 2em;
    }
  }
  .btn-signup {
    margin: 0 .5em;
  }
}
@media (min-width: 768px) {
  #main-content {
    .sidebar-area {
      padding: 0;
    }
  }
}
@media (min-width: 992px) {
}
@media (min-width: 1200px) {
  #header-image {margin-bottom:-100px; }
}

